syntax = "proto3";

option go_package = "proto/GetSession";

package go.micro.srv.GetSession;

service GetSession {
    rpc GetSession(Request) returns (Response) {}
    rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
    rpc PingPong(stream Ping) returns (stream Pong) {}
}

message Message {
    string say = 1;
}

message Request {
    string SessionId = 1;
}

message Response {
    string Errno = 1;
    string Errmsg = 2;
    // 返回用户名
    string UserName = 3;
}

message StreamingRequest {
    int64 count = 1;
}

message StreamingResponse {
    int64 count = 1;
}

message Ping {
    int64 stroke = 1;
}

message Pong {
    int64 stroke = 1;
}
